--- a/styles.css
+++ b/styles.css
@@ -1,33 +1,39 @@
 /* CSS Document */
 body{
-margin: 0;
-
+	margin: 0;
 }
-.h1index{
-  text-align: center;
-  background-color: forestgreen;
-  margin: 0;
-  padding-top: .25em;
-  padding-bottom: .25em;
+/* navbar */
+.navbar {
+	background: forestgreen;
+	overflow: auto;
+	display: flex;
 }
-
-.Navigation{
+.logo{
+	float: left;
+}
+nav {
 	text-align: center;
-	background-color: greenyellow;
 	padding-top: .05em;
 	padding-bottom: .1em;
+}
+nav ul {
+	list-style: none;
+	display: flex;
+}
+nav ul li {
+	text-transform: uppercase;
+	padding-right: 20px;
 }
 
 .Abt{
 	padding-left: .5em;
 }
 
-.imghome img {
+.imghome {
 	width: 100%;
 	image-resolution: from-image;
 	background-position: center;
-	
-	}
+}
 
 .contact{
 	padding-left: .5em;
@@ -82,7 +88,11 @@ margin: 0;
 
 }
 
-.Logo{
-	position: absolute; top: 0px; bottom: 0px;
-	
+a {
+    color: black;
+    text-decoration: none;
+    transition: color 0.5s;
+}
+a:hover {
+    color: gray;
 }
