--- a/styles.css
+++ b/styles.css
@@ -42,11 +42,17 @@ a:hover {
 
 /* main content */
 .title-section {
-	background-image: url("images/terrarium.jpg");
+	background-image: url("images/index-background.png");
 	background-attachment: fixed;
 	background-position: center;
 	background-size: cover;
 	height: 100vh;
+}
+.title {
+	text-align: center;
+	position: absolute;
+	top: 48vh;
+	width: 100%;
 }
 .content {
 	width: 80%;
