--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,7 @@ body {
 	margin: 0;
 	font-family: 'Abel', sans-serif;
 	color: white;
+	background-color: #1f1f1f;
 }
 
 /* navbar */
@@ -48,11 +49,26 @@ a:hover {
 	background-size: cover;
 	height: 100vh;
 }
-.title {
+.title-box {
 	text-align: center;
 	position: absolute;
-	top: 48vh;
 	width: 100%;
+    animation: fadeUpIn ease 3s;
+    animation-iteration-count: 1; 
+    animation-fill-mode: forwards; 
+} 
+@keyframes fadeUpIn {
+    0% { 
+		opacity: 0;
+		top: 43vh;
+    } 
+    100% { 
+		opacity: 1;
+		top: 38vh;
+     } 
+}
+.text-logo {
+	width: 70%;
 }
 .content {
 	width: 80%;
@@ -67,6 +83,17 @@ article {
 .product {
 	background: #1f1f1f;
 	width: 20%;
+	animation: fadeIn ease 1s;
+    animation-iteration-count: 1;
+	animation-fill-mode: forwards;
+}
+@keyframes fadeIn {
+    0% { 
+		opacity: 0;
+    } 
+    100% { 
+		opacity: 1;
+     } 
 }
 .product-description {
     background: #1f1f1f;
@@ -84,6 +111,16 @@ table {
 	margin: 0 auto;
 }
 
+/* social */
+.social-icon {
+	height: 50px;
+	margin-right: 20px;
+}
+.social-link {
+	display: flex;
+}
+
+/* random */
 p {
 	font-size: 14pt;
 }
