--- a/styles.css
+++ b/styles.css
@@ -160,11 +160,23 @@ textarea {
 	padding: 10px;
 }
 
+@media only screen and (max-width: 1000px) {
+	
+}
+
 @media only screen and (max-width: 775px) {
 	.dropdown-btn {
 		display: initial;
 	}
 	.expand-navbar {
 		display: none;
+	}
+	.product {
+		display: block;
+		width: 100%;
+		margin-bottom: 30px;
+	}
+	textarea {
+		width: 100%;
 	}
 }
