--- a/styles.css
+++ b/styles.css
@@ -16,11 +16,10 @@ body {
 	z-index: 1;
 	box-shadow: 0 0 10px #000000;
 }
-.logo {
-	margin-right: 10px;
-	margin-top: 10px;
-	margin-left: 30px;
+.nav-logo {
+	padding: 10px 30px;
 	float: left;
+	height: 60px;
 }
 nav {
 	margin-top: 14px;
