--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,6 @@ body {
 /* navbar */
 .navbar {
 	background: #1f1f1f;;
-	overflow: auto;
 	display: flex;
 	position: fixed;
 	width: 100%;
@@ -44,16 +43,23 @@ a:hover {
 .active-page {
 	color: gray;
 }
-.nav-dropdown:hover {
-	opacity: 1;
+.nav-dropdown-btn {
+	padding-bottom: 23px;
 }
-.nav-dropdown ul {
-	opacity: 1;
+.nav-dropdown:hover {
+	cursor: pointer;
+}
+.nav-dropdown:hover .nav-dropdown-content {
+	display: block;
+}
+.nav-dropdown-content {
+	display: none;
 	background: #111111;
 	position: absolute;
-	top: 60px;
-	left: 500px;
+	top: 80px;
+	left: 524px;
 	z-index: 1;
+	padding: 20px;
 }
 
 /* collapse navbar */
