--- a/styles.css
+++ b/styles.css
@@ -125,7 +125,7 @@ a:hover {
 	text-align: center;
 	position: absolute;
 	width: 100%;
-    animation: fadeUpIn ease 3s;
+    animation: fadeUpIn ease 2s;
     animation-iteration-count: 1;
     animation-fill-mode: forwards;
 }
@@ -171,9 +171,15 @@ table {
 	margin: 0 auto;
 }
 .product {
+	position: relative;
+	bottom: 0;
 	background: #1f1f1f;
 	width: 20%;
 	vertical-align: top;
+	transition: bottom 0.25s;
+}
+.product:hover {
+	bottom: 5px;	
 }
 .product-description {
     background: #1f1f1f;
