--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,7 @@ body {
 	width: 100%;
 	height: 80px;
 	z-index: 1;
-	box-shadow: 0 0 10px #000000;
+	/*box-shadow: 0 0 10px #000000;*/
 }
 .nav-text-logo {
 	display: initial;
@@ -41,14 +41,13 @@ nav ul {
 nav ul li {
 	display: table-cell;
 	text-transform: uppercase;
-	padding: 26px 20px 0;
+	padding: 26px 20px;
 	font-size: 16pt;
-	height: 100%;
 	background: #1f1f1f;
 	transition: background 0.5s;
 }
 nav ul li:hover {
-	background: #333333;
+	background: #292929;
 }
 a {
 	color: #AFAFAF;
@@ -58,9 +57,8 @@ a {
 a:hover {
     color: #ffffff;
 }
-.current {
-	color: #ffffff;
-}
+
+/* nav-dropdown */
 .nav-dropdown-btn {
 	padding-bottom: 23px;
 }
@@ -146,6 +144,15 @@ a:hover {
 }
 .text-logo {
 	width: 70%;
+}
+.scroll-indicator {
+	position: absolute;
+	bottom: 10px;
+	width: 100%;
+	text-align: center;
+}
+.down-arrow {
+	width: 50px;
 }
 .background-section {
 	background-attachment: fixed;
