--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,7 @@ body {
 	width: 100%;
 	height: 80px;
 	z-index: 1;
-	/*box-shadow: 0 0 10px #000000;*/
+	box-shadow: 0 0 10px #000000;
 }
 .nav-text-logo {
 	display: initial;
