--- a/styles.css
+++ b/styles.css
@@ -125,7 +125,6 @@ a:hover {
 	margin: 30px auto;
 }
 
-
 /* main content */
 .title-section {
 	background-image: url("images/index-background.png");
@@ -222,6 +221,22 @@ table {
 .product-img {
     width: 100%;
     margin: 0;
+}
+
+/* gallery */
+.gallery-img {
+	width: 100%;
+}
+.gallery-img:hover {
+	cursor: pointer;
+}
+.gallery-focus {
+	width: 100%;
+	height: 100vh;
+	display: none;
+	position: absolute;
+	background-color: rgba(0,0,0,0.7);
+	z-index: 1;
 }
 
 /* footer */
