--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,7 @@
 /* CSS Document */
+html {
+	scroll-behavior: smooth;
+}
 body {
 	margin: 0;
 	font-family: 'Abel', sans-serif;
@@ -228,36 +231,6 @@ table {
 .product-img {
     width: 100%;
     margin: 0;
-}
-
-/* product page */
-.product-pg-img {
-	width: 35%;
-	float: left;
-}
-.product-pg-description {
-	float: right;
-	width: 60%;
-}
-.product-pg-description ul {
-	float: none;
-}
-.verified {
-	height: 25px;
-}
-.buy-btn {
-	padding: 10px;
-	background: #1f1f1f;
-	float: left;
-	margin: 14px 20px;
-}
-.buy-btn p {
-	margin: 0;
-	font-size: 12pt;
-}
-.disclaimer {
-	font-size: 10pt;
-	color: #919191;
 }
 
 /* footer */
